--- a/job-portal-website-template/index.html
+++ b/job-portal-website-template/index.html
@@ -29,6 +29,12 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <script type="text/javascript">
+        document.getElementById('frmSearch').onsubmit = function() {
+            window.location = 'http://127.0.0.1:5500/index.html ' + document.getElementById('txtSearch').value;
+            return false;
+        }
+    </script>
 </head>
 
 <body>
@@ -80,31 +86,16 @@
         <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
             <div class="container">
                 <div class="row g-2">
-                    <div class="col-md-10">
-                        <div class="row g-2">
-                            <div class="col-md-4">
-                                <input type="text" class="form-control border-0" placeholder="Keyword" />
-                            </div>
-                            <div class="col-md-4">
-                                <select class="form-select border-0">
-                                    <option selected>Category</option>
-                                    <option value="1">Category 1</option>
-                                    <option value="2">Category 2</option>
-                                    <option value="3">Category 3</option>
-                                </select>
-                            </div>
-                            <div class="col-md-4">
-                                <select class="form-select border-0">
-                                    <option selected>Location</option>
-                                    <option value="1">Location 1</option>
-                                    <option value="2">Location 2</option>
-                                    <option value="3">Location 3</option>
-                                </select>
-                            </div>
-                        </div>
+                    <div class="col-md-2">
+                        <button class="btn btn-dark border-0 w-100">Login</button>
                     </div>
                     <div class="col-md-2">
-                        <button class="btn btn-dark border-0 w-100">Search</button>
+                        <button class="btn btn-dark border-0 w-100">Register</button>
+                    </div>
+                    <div class="col-md-2">
+                        <form action="" name="frmSearch">
+                        <input class="btn btn-light border-0 w-100" type="search" name="" id="" placeholder="Search..">
+                    </form>
                     </div>
                 </div>
             </div>
