added login design

--- a/job-search.html
+++ b/job-search.html
@@ -243,7 +243,7 @@
                 </div>
             </div>
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                <button type="submit" class="btn btn-outline-warning btn-lg">Reset</button>
+                <button type="reset" class="btn btn-outline-warning btn-lg">Reset</button>
                 <button type="submit" class="btn btn-primary btn-lg">Submit</button>
             </div>
            
